# schnuffel-testplugin

./: Cargo.toml  flake.nix
src/: lib.rs
