[package]
name = "schnuffel-testplugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate_type = ["cdylib"]

[dependencies]
schnuffel-types = {git = "https://github.com/miampf/schnuffel-types"}
extism-pdk = "1.2.0"
